upgrade gradle and java (#8)
upgrade gradle to 8.14.3
upgrade java to 21
get c++ language from intellij else fallback to objective-C